syntax = "proto3";
import "google/protobuf/empty.proto";

package myPing;

service Ping {
    rpc Echo (EchoRequest) returns (EchoReply) {}
    rpc Testing (EchoRequest) returns (EchoReply) {}
    rpc gotoHTTP (gotoHTTPRequest) returns (gotoHTTPReply) {}
    rpc gotoGRPC (gotoGRPCRequest) returns (gotoGRPCReply) {}
}

message EchoRequest {
    string message_id = 1;
    string message_body = 2;
}

message EchoReply {
    EchoRequest echo_request = 1;
    string timestr = 2;
    uint64 timestamp = 3;
}

message gotoHTTPRequest {
    string message_id = 1;
    string message_body = 2;
}

message gotoHTTPReply {
    string response = 1;
}

message gotoGRPCRequest {
    string message_id = 1;
    string message_body = 2;
}

message gotoGRPCReply {
    string response = 1;
}
